fixing my portfolio alignment

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ background-size: cover;
 } 
 
 .row{ 
-    padding: 3px;
+    padding: 8px;
 }
 
 
